k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: voteai-backend
  namespace: codecon
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`voteai.antoniopedro.com.br`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: voteai-backend
          port: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: voteai-frontend
  namespace: codecon
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`voteai.antoniopedro.com.br`)
      kind: Rule
      services:
        - name: voteai-frontend
          port: 80
